--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "dlv": "^1.1.2",
     "is-empty": "^1.2.0",
     "vue": "^2.6.10",
     "vuex": "^3.0.1"
